--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
           </div>
 
           <div class="member">
-            <!--  student 03 -->
+            <p>Jaydon Chen</p>
 
           </div>
 
