--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
           </div>
 
           <div class="member">
-            <!--  student 04 -->
+            <!--  Aditri Nasani -->
 
           </div>
 
