--- a/team.html
+++ b/team.html
@@ -43,8 +43,8 @@
           </div>
 
           <div class="member">
-            <p>Jaydon Chen</p>
-
+            <p><img class="member-pic" src="img/ramen.jpg"></p>
+            <a href="jaydon.html">Jaydon Chen</a>
           </div>
 
           <div class="member">
